--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "express": "^4.17.2",
     "rxjs": "^7.5.4"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.18"
   }
 }
