--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "rxjs": "^7.5.4"
   },
   "devDependencies": {
-    "@types/node": "^17.0.18"
+    "@types/node": "^17.0.18",
+    "cross-env": "^7.0.3",
+    "nodemon": "^2.0.15"
   }
 }
