--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "devDependencies": {
     "@types/node": "^17.0.18",
     "cross-env": "^7.0.3",
-    "nodemon": "^2.0.15"
+    "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.3.0",
+    "nodemon": "^2.0.15",
+    "prettier": "^2.5.1"
   }
 }
