feat: 新增博客sql操作语句test

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1"
   }
