--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "author": "hing",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2",
-    "sqlstring": "^2.3.3"
+    "express": "^4.17.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.18",
